Closed Bug 841718 Opened 12 years ago Closed 12 years ago

BaselineCompiler: Fix decompiler assert

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Assigned: jandem)

References

Details

Attachments

(1 file)

This assert is causing browser-chrome and jsreftest orange in debug builds.
Attached patch PatchSplinter Review
We were doing the right thing for most ops, only DELPROP, DELELEM and TOID need fixing. Both the browser-chrome and jsreftest orange seem to be under DELPROP.
Attachment #714336 - Flags: review?(bhackett1024)
Attachment #714336 - Flags: review?(bhackett1024) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: