Bug 841718 - Fix decompiler assert. r=bhackett