js/src/jit-test/tests/baseline/bug841718.js
@@ -1,0 +1,17 @@
+// Don't assert in the decompiler.
+function f() {
+    var o = null;
+
+    try {
+	delete o.prop;
+    } catch(e) {}
+
+    try {
+	delete o[1];
+    } catch(e) {}
+
+    try {
+	o[{}]++;
+    } catch(e) {}
+}
+f();
